Corregidos los errores de tipeo

--- a/propuesta_tesis_magister.tex
+++ b/propuesta_tesis_magister.tex
@@ -259,7 +259,7 @@ Tomando lo anterior, un modelo que considere la sintaxis y semántica de un ensay
 
 \section{Propuesta}
 
-Tomando lo revisado en el trabajo relacionado, se propone trabajar en un método de evaluación de ensayos que considere la sintaxis y semántica de los textos. Para ello, se tomarán como punto de partida los métodos basados en un modelo de espacio vectorial y los métodos que se fundamentan en teoría de discurso. La razón de ello, es que los métodos evalúan diferentes características de la coherencia textual, es decir, no existe correlación entre las evaluaciones que entregan.
+Se propone desarrollar un método computacional que permita evaluar automáticamente ensayos considerando aspectos de coherencia textual y que considere la sintaxis y semántica. Para ello, se tomarán como punto de partida los métodos basados en un modelo de espacio vectorial y los métodos que se fundamentan en teoría de discurso. La razón de ello, es que los métodos evalúan diferentes características de la coherencia textual, es decir, no existe correlación entre las evaluaciones que entregan.
 
 
 \section{Metodología Experimental}
