--- a/propuesta_tesis_magister.tex
+++ b/propuesta_tesis_magister.tex
@@ -260,19 +260,23 @@ Tomando lo anterior, un modelo que considere la sintaxis y semántica de un ensay
 
 \section{Propuesta}
 
-Se propone desarrollar un método computacional que permita evaluar automáticamente ensayos considerando aspectos de coherencia textual y que considere la sintaxis y semántica.
+En este trabajo se propone desarrollar un método computacional que permita evaluar automáticamente ensayos considerando aspectos de coherencia textual y que considere la sintaxis y semántica.
 
-Para ello se considerarán métodos que evalúen diferentes componentes de la coherencia textual, para posteriormente ensamblarlos.
+El primer método a considerar está basado en un modelo de regresión\cite{t40}. Este método de evaluación de ensayos considerará las características mostradas en la tabla \ref{t2}.
 
-El primer método a considerar será un método basado en características estadísticas de los textos, tal como el descrito en \cite{t40}. Este método de evaluación de ensayos considerará las características mostradas en la tabla \ref{t2}. Para aplicar este método, es necesario tener un conjunto de ensayos pre-evaluados, y ajustar un modelo de regresión como el mostrado en la ecuación \ref{eq0}.
+Para considerar las características sintácticas de los textos se utilizará un método basado en la teoría del centrad \cite{t50}. Para ello, se representan los documentos como una matriz de entidades, donde cada entidad tiene un rol dentro de la oración, como por ejemplo sujeto (s), objeto (o) u otro rol que no sea sujeto ni objeto (x). En la figura \ref{figura3} se muestra un ejemplo de una matriz de entidades, donde las filas de la matriz representan las oraciones del texto, las columnas son las entidades dentro del texto y en cada celda de la matriz se encuentra el rol de la entidad. Luego, el análisis de coherencia se hará considerando transiciones de entidades entre oraciones. Cada transición tendrá una cierta probabilidad dependiendo de la estructura de la matriz. Por ejemplo en la figura \ref{figura3} la transición {\em [s-]} tiene una probabilidad de 0.08 (se calcula como la razón entre la frecuencia de ocurrencia de la transición (8) y la cantidad de transiciones de largo 2, en este caso 75).
 
-Por otro lado, también se considerará un método basado en un modelo de espacio vectorial. Se utizará LSA, y se aplicará a un conjunto de ensayos pre-evaluados con el fin de obtener un espacio semántico. Dentro de dicho espacio se compararán los ensayos utilizando la similitud coseno (ecuación \ref{eq2}).
+Otro método que se utilizará para evaluar la coherencia textual estará basado en un modelo de {\em cadenas léxicas}. Este método toma como supuesto que un texto es coherente si se utilizan palabras que estén relacionadas semánticamente entre oraciones. 
 
-Para considerar las características sintácticas de los textos se utilizará un método basado en la teoría del centrado como el mostrado en \cite{t50}. Para ello, se requerirá representar un documento como una matriz de entidades, donde cada entidad tiene un rol dentro de la oración, como por ejemplo sujeto (s), objeto (o) u otro rol que no sea sujeto ni objeto (x). En la figura \ref{figura3} se muestra un ejemplo de una matriz de entidades, donde las filas de la matriz representan las oraciones del texto, las columnas son las entidades dentro del texto y en cada celda de la matriz se encuentra el rol de la entidad. Luego, el análisis de coherencia se hará considerando transiciones de entidades entre oraciones. Cada transición tendrá una cierta probabilidad dependiendo de la estructura de la matriz. Por ejemplo en la figura \ref{figura3} la transición {\em [s-]} tiene una probabilidad de 0.08 (se calcula como la razón entre la frecuencia de ocurrencia de la transición (8) y la cantidad de transiciones de largo 2, en este caso 75). Se considera que ciertos patrones de transiciones tienden a ocurrir en textos coherentes. Luego, cada ensayo se representará como un vector, donde cada componente del vector corresponderá a la probabilidad de ocurrencia de una transición, un ejemplo de ello se muestra en la figura \ref{figura4}. Finalmente se aplicará regresión para encontrar un modelo que relacione las probabilidades obtenidas y la nota del ensayo.
+Finalmente, utilizando estos métodos, se hará un ensamble (inicialmente con un modelo de regresión), es decir, se evaluará un texto considerando las componentes de la coherencia de todos los métodos. 
 
-Otro método que se utilizará para evaluar la coherencia textual estará basado en un modelo de {\em cadenas léxicas}. Este modelo toma como supuesto que un texto es coherente si se utilizan palabras que estén relacionadas semánticamente entre oraciones. Para aplicar este método, se requiere tener una representación de matemática del significado de las palabras y así poder cuantificar la similitud entre ellas. Esto se logrará de dos formas alternativas, la primera es considerando un corpus de millones de documentos, como el corpus TASA (Touchstone Applied Science Associates). Este corpus contiene millones de documentos que consideran conceptos de una amplia cantidad de tópicos, y el significado de las palabras se extraerá utilizando LSA. Al aplicar LSA, se obtendrá un espacio semántico, y cada palabra estará representada como un vector. Luego, se podrá utilizar la similitud coseno para ver qué tan similares son dos palabras. Luego, cada texto se segmentará en oraciones, y para obtener una representación vectorial de estas, se considerará la suma vectorial de las palabras que la componen. Posteriormente, se calculará la similitud promedio entre oraciones adyacentes (ecuación \ref{eq5}). Alternativamente, se considerará otra representación de palabras como la realizada en \cite{t51}, pues esta a diferencia de LSA no asume un modelo de bolsa de palabras. Con los vectores de palabras obtenidos, se realizará el cálculo de similitud entre oraciones adyacentes como el descrito previamente.
+Las principales contribuciones de este trabajo son dos:
 
-Finalmente, utilizando estos métodos, se hará un ensamble (inicialmente con un modelo de regresión), es decir, se evaluará un texto considerando las componentes de la coherencia de todos los métodos.
+\begin{itemize}
+	\item Se aplicará un ensamble de diferentes métodos basados en sintaxis y en semántica de los ensayos; Esto a mi conocimiento no ha sido aplicado como tal. La diferencia con las investigaciones recientes es que la tendencia apunta a aplicar nuevos métodos de clasificación a un conjunto de características estadísticas, o generar nuevas características que evalúen coherencia textual. Por otro lado, este trabajo apunta a utilizar técnicas de evaluación de coherencia textual (ej: modelo de cadenas léxicas, y teoría del centrado) que han sido utilizadas en otros contextos (generación de resúmenes, traducción automática), y se usarán para la evaluación automática de ensayos.
+	
+	\item Se realizará una comparación del rendimiento de los métodos para evaluar coherencia textual, en la evaluación automática de ensayos y otros algoritmos de aprendizaje automático utilizados para la evaluación automática de ensayos, lo que dará nuevas direcciones para investigar este problema.
+\end{itemize}
 
 \begin{table}[!htbp]
 \centering
